# stringc

./: .gitignore  CMakeLists.txt  README.md
include/stringc/: base64.h  io.h  string.h  stringbuilder.h  stringjoiner.h
src/: CMakeLists.txt  io.c  string.c  stringbuilder.c  stringbuilder.h  stringjoiner.c
src/charset/: utf8.c
src/encoding/: base64.c
test/: CMakeLists.txt  test.c  test.cpp
test/c/: CMakeLists.txt  base64.c  main.c  stringbuilder.c  stringjoiner.c  testing.h  utf8.c
test/c/base64/: CMakeLists.txt  main.c
test/c/stringbuilder/: CMakeLists.txt
test/c/stringjoiner/: CMakeLists.txt  main.c
test/cpp/: CMakeLists.txt  main.cpp
